Changing class names

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
  <!-- Image here later --> 
    
-  <div class= "paragraph">
+  <div class= "aboutMe">
     <h3> About Me </h3>
     <p> 
      I am 21 year old, third year student living in Boston. I orginally am from Illinois in 
@@ -52,7 +52,7 @@
     </p>
   </div>
  
-  <div class= "paragraph">
+  <div class= "lifeSynompis">
     <h3> Life Synompis</h3>
     <p>
      I was born in Hunan China and adopted at the age of three and a half. 
@@ -102,7 +102,7 @@
     </p>
    </div>
 
-   <div class= "paragraph">
+   <div class= "careerAspirations">
     <h3> Career Aspirations </h3>
     <p> 
      There is still so many aspects of the world I have no idea about have little
@@ -122,7 +122,7 @@
     </p>
    </div>
   
-   <div class= "paragraph">
+   <div class= "passions">
     <h3> Passions </h3>
     <p> 
      As I have entered the young adult stage of my life there where two distinct 
