--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
     </p>
   </div>
  
-  <div class= "lifeSynompis">
-    <h3> Life Synompis</h3>
+  <div class= "lifeSynopsis">
+    <h3> Life Synopsis</h3>
     <p>
      I was born in Hunan China and adopted at the age of three and a half. 
      Due to speaking some chinese as a child my parents where keen on 
