Changing css file name

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <!-- connecting the css file to the html file -->
-<link rel="stylesheet" href="css/style.css"> 
+<link rel="stylesheet" href="css/index.css"> 
  <!-- loading in the icon file -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <title> Meixia Sindelar Portfolio </title>
