--- a/index.html
+++ b/index.html
@@ -45,8 +45,9 @@
     <h3> About Me </h3>
     <p> 
      I am 21 year old, third year student living in Boston. I orginally am from Illinois in 
-     the ChicagoLand area and have lived there most of my life. 
-     
+     the ChicagoLand area and have lived there most of my life. xxxxxxxxxxxxxxxxxxxxxxxxxxx
+     xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+     xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
      <br> CURRENTLY NOTHING HAS BEEN EDITED/PEER EDITED
      <br> - stuff that happened in the last year/ what I want to do in the future
     </p>
