Adding resume/ to img path

--- a/resume.html
+++ b/resume.html
@@ -42,8 +42,8 @@
                 <th> <p class= "header2"> Business Administration </p> </th>
             </tr>
             <tr>
-                <td> <img class= "resumeImage1" src="images/CS Resume.jpg" /> </td>
-                <td> <img class= "resumeImage2" src="images/Business Resume.jpg" /> </td>
+                <td> <img class= "resumeImage1" src="images/resume/CS Resume.jpg" /> </td>
+                <td> <img class= "resumeImage2" src="images/resume/Business Resume.jpg" /> </td>
             </tr>
         </table>
       </div>
