Adding resume/ to img path

--- a/info.html
+++ b/info.html
@@ -36,7 +36,8 @@
             <br> *This was an individual project  
           </p> 
         </td>
-        <td align= "center"> <a href= "https://github.com/Meixia-S/Marble-Solitaire-Game" target= "_blank"> <img src= "images/Link.png" alt= "Link1" /></a>
+        <td align= "center"> <a href= "https://github.com/Meixia-S/Marble-Solitaire-Game" target= "_blank"> 
+          <img src= "images/resume/Link.png" alt= "Link1" /></a>
         </td>
       </tr> 
       <tr> 
@@ -63,7 +64,8 @@
             <br> 
           </p> 
         </td>
-        <td align= "center"> <a href= "https://github.com/Meixia-S/Image-Processor" target= "_blank"> <img src= "images/Link.png" alt= "Link2" /></a> 
+        <td align= "center"> <a href= "https://github.com/Meixia-S/Image-Processor" target= "_blank"> 
+          <img src= "images/resume/Link.png" alt= "Link2" /></a> 
        </td>
       </tr> 
       <tr>
@@ -83,7 +85,7 @@
           </p> 
         </td>
         <td align= "center"> <a href= "https://drive.google.com/file/d/19EbRlj_XCEd1ZUNXxqgIzP_407wwqBN8/view?usp=sharing" target= "_blank"> 
-          <img src= "images/Link.png" alt= "Link3" /></a>  
+          <img src= "images/resume/Link.png" alt= "Link3" /></a>  
        </td>
       </tr>
       <tr>
@@ -106,7 +108,7 @@
           </p> 
         </td>
         <td align= "center"> <a href= "https://drive.google.com/file/d/1fnnQ6KmjBnkcz2IrwlSEoM4dXoAdi1lJ/view?usp=sharing" target= "_blank"> 
-          <img src= "images/Link.png" alt= "Link4" /></a> 
+          <img src= "images/resume/Link.png" alt= "Link4" /></a> 
        </td>
       </tr> 
       <tr>
@@ -123,7 +125,8 @@
             <br> and designing and recording my slides.
           </p>
         </td>
-        <td align= "center"> <a href= "https://www.youtube.com/watch?v=oo2ZDTQyqRs" target= "_blank"> <img src= "images/Link.png" alt= "Link5" /></a>  
+        <td align= "center"> <a href= "https://www.youtube.com/watch?v=oo2ZDTQyqRs" target= "_blank"> 
+          <img src= "images/resume/Link.png" alt= "Link5" /></a>  
        </td>
       </tr> 
     </table> 
