--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <a href="tel:*6304600067" id="number" title="click to contact me"><i class="fa fa-phone"></i></a>
             </div>  
         </div>
-        <img src="images/index/White-Mt.jpg" alt="white snowy mt" />
+        <img src="images/index/White-Mt.jpeg" alt="white snowy mt" />
         <!-- This adds my intro text. -->
         <div class="centered">
             <p class="intro1"> Hello My Name Is</p>
