--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
      <br> CURRENTLY NOTHING HAS BEEN EDITED/PEER EDITED
      <br> - stuff that happened in the last year/ what I want to do in the future
     </p>
+   <div id= "profilePic">  <img src="images/index/blank_profile.jpg" alt="profile picture" /> </div> 
   </div>
  
   <div class= "lifeSynopsis">
@@ -68,7 +69,10 @@
      two issues took years to overcome. With a couple years of theropy and four
      years in the Willison program, I was able to mostly overcome both set backs.
      I can contribute the early action to my mother who was very attentive and 
-     saw my obessive behavior as a child. 
+     saw my obessive behavior as a child.
+      <div id= "artIcon">  <img src="images/index/artIcon.png" alt="art icon" /> </div> 
+      <div id= "danceIcon">  <img src="images/index/danceIcon.png" alt="dance icon" /> </div> 
+      <div id= "tennisIcon">  <img src="images/index/tennisIcon.png" alt="tennis icon" /> </div> 
      <br> <br>
      At age 12 my mother passed away from heart cancer. This had a huge impact 
      on my life as she was my main care taker. Soon after her passing my father 
@@ -164,6 +168,8 @@
      if you ever learn more about bugs, you'll find that they truly are the 
      aliens that roam along side us!
     </p>
+    <div id= "forest1">  <img src="images/index/forest_silhouette.png" alt="forest silhouette" /> </div> 
+    <div id= "forest2">  <img src="images/index/Pine_forest_silhouette.jpg" alt="Pine forest silhouette" /> </div> 
    </div>
   
    <div class= "tyNote">
