--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
   var topbar = document.getElementById("topbar");
   var top = topbar.offsetTop;
   
-  function stickyTopbar() {
+  let stickyTopbar = function() {
    if (window.scrollY >= top) {
     topbar.classList.add("sticky");
    } else {
@@ -195,7 +195,8 @@
   window.addEventListener("scroll", stickyTopbar);
   
   /* Have profile image come from the right side of screen and changes opacity. */
-  function transformProfile(opacity) {
+  let transformProfile = function(opacity1) {
+   document.getElementById('profile').style.opacity = opacity1; 
   }
   
  </script> 
