Placing pine img

--- a/index.html
+++ b/index.html
@@ -166,8 +166,6 @@
      if you ever learn more about bugs, you'll find that they truly are the 
      aliens that roam along side us!
     </p>
-    <div id= "forest1">  <img src="images/index/forest_silhouette.png" alt="forest silhouette" /> </div> 
-    <div id= "forest2">  <img src="images/index/Pine_forest_silhouette.jpg" alt="Pine forest silhouette" /> </div> 
    </div>
   
    <div class= "tyNote">
@@ -176,7 +174,8 @@
     Thank you so much for getting this far! 
     If you are an employer please check out my resume page as there is more information regarding my skills, knowledge, and experience.
    </p>
-  </div>              
+  </div> 
+ <img src="images/index/Pine_forest_silhouette.jpg" alt="Pine forest silhouette" id= "pine" />
  </div>
                 
  <script>
