--- a/index.html
+++ b/index.html
@@ -175,6 +175,7 @@
     If you are an employer please check out my resume page as there is more information regarding my skills, knowledge, and experience.
    </p>
   </div> 
+  <img  src= "images/index/Pine_forest_silhouette.jpg" alt= "pine forest" id= "pine" />
  </div>
                 
  <script>
