--- a/index.html
+++ b/index.html
@@ -168,6 +168,7 @@
     </p>
    </div>
   
+  <div>
    <div class= "tyNote">
     <h3> Thank You </h3> 
    <p> 
@@ -176,6 +177,7 @@
    </p>
   </div> 
   <img  src= "images/index/pine-forest-silhouette.jpg" alt= "pine forest" id= "pine" />
+  </div> 
  </div>
                 
  <script>
