--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
  <script>
   /* Making a 'sticky' navbar. */
   var navContainer = document.getElementById("navContainer");
-  var top = topbar.offsetTop;
+  var top = navContainer.offsetTop;
   
   let stickyNavContainer = function() {
    if (window.scrollY >= top) {
