--- a/resume.html
+++ b/resume.html
@@ -9,7 +9,7 @@
 <title> Resume Page </title>
 </head>
     
-<body style="background-image: url(images/resume/crumpled-paper.jpg)"> 
+<body style="background-image: url(images/resume/crumpled-paper.jpg)" id= "background"> 
     <div class="starterimage">
         <div class="navcontainer"> 
             <!-- adding the top bar with contact information and other options. -->
