--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
      <br> CURRENTLY NOTHING HAS BEEN EDITED/PEER EDITED
      <br> - stuff that happened in the last year/ what I want to do in the future
     </p>
-   <div id= "profilePic">  <img src="images/index/blank-profile.jpg" alt="profile picture" id="profile" onscroll= "transformProfile(1)"/> </div> 
+   <div id= "profilePic">  <img src="images/index/blank-profile.jpg" alt="profile picture" class="profile profile-transition" /> </div> 
   </div>
  
   <div class= "lifeSynopsis">
@@ -194,9 +194,18 @@
   window.addEventListener("scroll", stickyNavContainer);
   
   /* Have profile image come from the right side of screen and changes opacity. */
-  let transformProfile = function(opacity1) {
-   document.getElementById('profile').style.opacity = opacity1; 
-  }
+  const profile = document.querySelector(".profile");
+  profile.classList.remove("profile-transition");
+  
+  const observer = new IntersectionObserver(entries => {
+   entries.forEach(entry => {
+    if (entry.isIntersecting) {
+     profile.classList.add("profile-transition");
+     return; }
+    profile.classList.remove("profile.transition"); });
+  });
+  
+  observer.oberve(document.querySelector("aboutMe"));
   
  </script> 
 </body>
