--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
      <br> CURRENTLY NOTHING HAS BEEN EDITED/PEER EDITED
      <br> - stuff that happened in the last year/ what I want to do in the future
     </p>
-   <div id= "profilePic">  <img src="images/index/blank-profile.jpg" alt="profile picture" class="profile profile-transition" /> </div> 
+   <div id= "profilePic">  <img src="images/index/blank-profile.jpg" alt="profile picture" class="profile" /> </div> 
   </div>
  
   <div class= "lifeSynopsis">
