--- a/index.html
+++ b/index.html
@@ -202,10 +202,10 @@
     if (entry.isIntersecting) {
      profile.classList.add("profile-transition");
      return; }
-    profile.classList.remove("profile.transition"); });
+    profile.classList.remove("profile-transition"); });
   });
   
-  observer.oberve(document.querySelector("aboutMe"));
+  observer.oberve(document.querySelector("profile"));
   
  </script> 
 </body>
