--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
   window.addEventListener("scroll", stickyNavContainer);
   
   /* Have profile image come from the right side of screen and changes opacity. */
-  const profile = document.querySelector(".profile");
+  const profile = document.querySelector("profile");
   profile.classList.remove("profile-transition");
   
   const observer = new IntersectionObserver(entries => {
