--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="starterImage">
         <div class="navContainer" id= "navContainer"> 
             <!-- adding the top bar with contact information and other options. -->
-            <div class="topBar">
+            <div class="topBar" id= "topBar">
                 <a href="index.html" id="home">Home</a>
                 <a href="resume.html" id="resume">Resumes</a>
                 <a href="references.html" id="references">References</a>
@@ -180,18 +180,18 @@
                 
  <script>
   /* Making a 'sticky' navbar. */
-  var navContainer = document.getElementById("navContainer");
+  window.onscroll = function () {stickyTopBar()};
+  
+  var topBar = document.getElementById("topBar");
   var top = navContainer.offsetTop;
   
-  let stickyNavContainer = function() {
+  let stickyTopBar = function() {
    if (window.pageYOffset >= top) {
-    navContainer.classList.add("sticky");
+    topBar.classList.add("sticky");
    } else {
-    navContainer.classList.remove("sticky");
+    topBar.classList.remove("sticky");
    }
   }
-  
-  window.addEventListener("scroll", stickyNavContainer);
   
   /* Have profile image come from the right side of screen and changes opacity. */
   const profile = document.querySelector("profile");
